--- a/lab-02-plays/java-httpd.yml
+++ b/lab-02-plays/java-httpd.yml
@@ -1,8 +1,8 @@
 ---
 # create new group, appservers, and install java
 - hosts: localhost  # Host or Group of Selections
-  gather_facts: true
-  become: true
+  gather_facts: false
+#   become: true
   vars:
     httpd_port: 8080
   tasks:
@@ -10,7 +10,7 @@
   - apt:
       pkg: apache2
       state: installed
-    when: ansible_distribution == "RedHat" 
+    when: ansible_distribution == "Ubuntu" 
 
   - yum:
       pkg: httpd
@@ -32,7 +32,7 @@
   
 
 - hosts: localhost
-  become: true
+#   become: true
   tasks:
   - name: Install default-jdk
     yum: name=java-1.8.0-openjdk state=present
