--- a/lab-02-plays/java-httpd.yml
+++ b/lab-02-plays/java-httpd.yml
@@ -10,7 +10,7 @@
   - apt:
       pkg: apache2
       state: installed
-    when: ansible_distribution == "Ubuntu" 
+    when: ansible_distribution == "Debian" 
 
   - yum:
       pkg: httpd
