--- a/lab-02-plays/java-httpd.yml
+++ b/lab-02-plays/java-httpd.yml
@@ -9,7 +9,7 @@
   
   - apt:
       pkg: apache2
-      state: installed
+      state: present
 #     when: ansible_distribution == "Debian" 
 
 #   - yum:
