--- a/lab-02-plays/java-httpd.yml
+++ b/lab-02-plays/java-httpd.yml
@@ -10,6 +10,7 @@
   - apt:
       pkg: apache2
       state: present
+      update_cache: yes
 #     when: ansible_distribution == "Debian" 
 
 #   - yum:
