--- a/lab-02-plays/java-httpd.yml
+++ b/lab-02-plays/java-httpd.yml
@@ -11,6 +11,7 @@
       pkg: apache2
       state: present
       update_cache: yes
+      become: yes
 #     when: ansible_distribution == "Debian" 
 
 #   - yum:
