--- a/lab-02-plays/java-httpd.yml
+++ b/lab-02-plays/java-httpd.yml
@@ -40,7 +40,7 @@
 #     yum: name=java-1.8.0-openjdk state=present
 #     when: ansible_os_family == "RedHat"
   - name: Install default-jdk for Debian
-    apt: name=terminator state=present
+    apt: name=ntp state=present
 #     when: ansible_os_family == "Debian"
 #   - name: Install java in amazon linux
 #     yum: name=java-1.8.0-openjdk state=present
